--- a/app/globals.css
+++ b/app/globals.css
@@ -40,8 +40,8 @@ a {
     color-scheme: dark;
   }
 }
-.nav {margin:200px;background-color: red;}
-.nav li {padding:100px 0}
+.nav ul {list-style:none;margin:200px;}
+.nav li a {display:block;padding:100px 0;margin:1px;text-align:center;background-color: red;}
 
 .contents {
   display: flex;
